--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 
 <html lang="en">
 <head>
-  <title>POPCAT CLASSIC</title>
+  <title>POPCAT CLASSIC - 5201314</title>
 </head>
 
 <body>
 <img class="title" src="imgs/popcat.svg" alt="POPCAT">
 
-<div class="cat-img" id="p">5201314</div>
+<div class="cat-img" id="p"></div>
 </body>
 </html>
