--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <body>
 <img class="title" src="imgs/popcat.svg" alt="POPCAT">
-<img class="title" src="imgs/popcat.svg" alt="POPCAT">
-<div class="cat-img" id="p"></div>
+
+<div class="cat-img" id="p">5201314</div>
 </body>
 </html>
